# redis-keys-stats

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml  rust.yml
src/: config.rs  key_prefix.rs  main.rs  prometheus.rs  stats.rs  utils.rs
src/result_formatters/: json.rs  mod.rs  plain.rs
