[package]
name = "redis-keys-stats"
version = "0.1.0"
authors = ["Ermakov Oleg <github@ermakov.cc>"]
edition = "2021"
license = "MIT"
description = "A simple tool to get statistics about keys in Redis"

[dependencies]
structopt = "^0.3"
strum = { version = "^0.26", features = ["derive"] }

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
indicatif = "^0.17"
humantime = "^2.1"

redis = "^0.25"
